# LegalEval2023

./: .gitignore  L-NER_CRF.py  L_NER_CRF.py  L_NER_CRF_default_config.json  L_NER_CRF_model_106_MERGED_config.json  L_NER_CRF_train.py  NER_TRAIN_JUDGEMENT.csv  NER_TRAIN_PREAMBLE.csv  RR.py  RR2.py  RR_BOW  RR_BOW.py  RR_DEV.csv  TRAIN_DEV_MERGE.py  corpus_splitter_v2.py  data_set.py  default_CRF_config.json  default_CRF_config2.json  dev_classification_report.csv  df_test.csv  latest_results.csv  main.py  mean_vect.py  mean_vect2.py  parser1.py  pyproject.toml  readme.md  regex_config.json  requirements.txt  setup.py  test_CRF.py  test_CRF3.py  text_base_judgement.csv  text_base_preamble.csv  trace.csv  train_dev_judgement.py  train_dev_preamble.py
L_NER/: L_NER_CRF.py  L_NER_CRF_MPI.py  L_NER_CRF_ONLY_POSTPROCESSING.py  L_NER_CRF_default_config.json  L_NER_CRF_model_101_config.json  L_NER_CRF_model_106_MERGED_config.json  L_NER_CRF_train.py  explain_eli5.py  latest_results.csv
L_NER/L_NER_analysis/: L_NER_analysis.py  L_NER_analysis_config.json
L_NER_analysis/: L_NER_analysis.py  L_NER_analysis_config.json
L_NER_old/CRF/: default_CRF_config.json  test_CRF3.py
L_NER_old/regex/: main.py
LegalEval2023_OrleansUniversity/: L_NER_CRF_default_config.json  L_NER_CRF_train.py
RR/BOW/: best_model.pkl  bow.py  regression_logistique.py
RR/Data/: RR_DEV_alt.csv  data_extraction.py
RR/bow/: analyse.py  best_model.pkl  classifieur.py  prediction.csv
RR/ngrams/: ngrams.py
RR/vecteurs/: RR_2  (+7 more)
tools/: TRAIN_DEV_MERGE.py  TRAIN_DEV_MERGE_config.json  parser1.py
(+11 files in other folders)
