[build-system]
requires = [
	"setuptools",
	"setuptools-scm",
	"pandas>=1.5.2",
	"spacy>=3.4.0",
	"seqeval>=1.2.2",
	"numpy>=1.23.3",
	"scikit-learn>=1.1.3",
	"sklearn-crfsuite>=0.3",
	"joblib>=1.1.0",
	"NLTK>=3.8.1",
	"matplotlib>=3.6.2",
	"seaborn>=0.12.2",
	"sent2vec>=0.3.0",
	"tqdm>=4.64.1"
]

[project]
name = "UONLP"
version = "0.2.0"
authors = [
	{ name="Bosch Sébastien", email="sebastien.bosch@etu.univ-orleans.fr" },
	{ name="Joanne Kim", email="joanne.kim@etu.univ-orleans.fr" },
	{ name="Estève Louis", email="louis.esteve@etu.univ-orleans.fr" },
	{ name="Minard Anne-Lyse", email="anne-lyse.minard@univ-orleans.fr" },
]
description = "University of Orleans (France) participation to LegalEval2023."
readme = "readme.md"
requires-python = ">=3.7,<3.11"

[tool.setuptools]
packages = ["RR","L_NER"]
